# Nuc-pdf

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
nucleireport/: __init__.py  __main__.py  charts.py  cli.py  models.py  parser.py  processor.py  report_builder.py  styles.py
sample_data/: sample_scan.jsonl
tests/: test_parser.py  test_processor.py
