[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleireport"
version = "0.1.0"
description = "Professional PDF report generator for Nuclei vulnerability scanner output"
requires-python = ">=3.11"
dependencies = [
    "reportlab>=4.0",
    "click>=8.1",
    "pydantic>=2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
nucleireport = "nucleireport.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
